<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jecsan.phonebook.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/first_name_entry"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/last_name_entry"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <TextView
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:text="@string/phone_number" />

       <EditText
           android:id="@+id/phone_number_entry"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:inputType="phone" />

   </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showAll_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/show_all_button" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />
    </LinearLayout>


</LinearLayout>
